# skill-contracts-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: problem-statement.md
examples/: README.md
examples/autonomous-agent/: README.md  agent_loop.py  skill.yaml
examples/cursor-ide/: README.md
examples/cursor-ide/investigate-latency/: SKILL.md
examples/elastic-agent-builder/: README.md  convert_and_push.py  cursor_to_kibana.py  kibana_to_cursor.py  skill.md
examples/python-app/: README.md  agent_loop.py  skill.yaml
spec/: SPEC.md  openskills-schema.json  scp-schema.json
spec/examples/: args-template.yaml  full-constraints.yaml  multi-evidence.yaml  no-constraints.yaml  partial-constraints.yaml  referenced-content.yaml
src/openskills/: __init__.py  cli.py  elastic_compat.py  loader.py  models.py  schema.py  validator.py
src/openskills/adapters/: __init__.py  elastic.py  prompt.py
src/openskills/runtime/: __init__.py  enforcer.py  evidence.py  planner.py
src/scp/: __init__.py  cli.py  elastic_compat.py  loader.py  models.py  schema.py  validator.py
src/scp/adapters/: __init__.py  elastic.py  prompt.py
src/scp/runtime/: __init__.py  protocol.py
tests/: test_activation.py  test_cli.py  test_elastic_adapter.py  test_elastic_compat.py  test_enforcer.py  test_evidence.py  test_json_support.py  test_loader.py  test_models.py  test_planner.py  test_prompt.py  test_validator.py
