[project]
name = "openskills"
version = "0.1.0"
description = "Declarative skill contracts for LLM agents -- define what tools to use, what evidence to collect, and when to finalize."
readme = "README.md"
authors = [
    { name = "nikfot", email = "nik_fot@hotmail.gr" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "click>=8.0,<9",
    "jsonschema>=4.0,<5",
    "python-frontmatter>=1.0,<2",
]

[project.scripts]
openskills = "openskills.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jsonschema>=4.26.0.20260508",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
