[project]
name = "skill-contracts-protocol"
version = "0.1.0"
description = "SCP -- Skill Contracts Protocol. Declarative, enforceable contracts for LLM agent skills. Extends agentskills.io with runtime tool gating, evidence gates, query plans, and finalization rules."
readme = "README.md"
authors = [
    { name = "nikfot", email = "nik_fot@hotmail.gr" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "click>=8.0,<9",
    "jsonschema>=4.0,<5",
    "python-frontmatter>=1.0,<2",
]

[project.scripts]
scp = "scp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jsonschema>=4.26.0.20260508",
    "types-pyyaml>=6.0.12.20260510",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scp"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
